--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
-    
+
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.1"
     }
 }
 
 apply plugin: 'kotlin'
+apply plugin: "com.github.johnrengelman.shadow"
 apply plugin: 'application'
 
 group 'com.qovery'
@@ -32,4 +35,10 @@ dependencies {
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "ch.qos.logback:logback-classic:$logback_version"
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
+}
+
+shadowJar {
+    baseName = 'my-application'
+    classifier = null
+    version = null
 }
